--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,10 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>CSS Lab | Responsive Cloning | Product Hunt</title>
-  <link rel="stylesheet" href="styles.min.css">
+  <title>CSS | Responsive Cloning</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
+  <header>
+    <nav>
+      <div class="part1">
+        <img src="/starter-code/images/logo.png">
+        <input type="text" placeholder="🔎 Discover your next favorite thing...">
+        <button>LOGIN</button>
+      </div>
+      <ul>
+        <li>Home</li>
+        <li>Tech</li>
+        <li>Games</li>
+        <li>Podcasts</li>
+        <li>Books</li>
+        <li>Bots</li>
+        <li>Developer Tools</li>
+        <li>iMessage Apps</li>
+        <li>iPhone</li>
+        <li>Photography Tools</li>
+        <li>◀️▶️</li>
+      </ul>
+    </nav>
+  </header>
 </body>
 </html>
